2006-04-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/wavenc/gstwavenc.c: (gst_wavenc_base_init),
	(gst_wavenc_class_init), (gst_wavenc_init),
	(gst_wavenc_create_header_buf), (gst_wavenc_push_header),
	(gst_wavenc_sink_setcaps), (get_id_from_name), (gst_wavenc_event),
	(gst_wavenc_chain), (gst_wavenc_change_state):
	* gst/wavenc/gstwavenc.h:
	  Set caps on first outgoing buffer, so that it doesn't error out
	  immediately with a non-negotiated error (#338716). Rewrite and
	  clean up a bit; fix setcaps function to parse things properly;
	  fix sink caps (8bit audio is unsigned and doesn't have depth);
	  use boilerplate macros; remove unused properties stuff.

2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gdk_pixbuf/gstgdkpixbuf.c:
	  Leave JPEG decoding to our jpegdec plugin. gdkpixbufdec cannot
	  handle MJPEG streams and might be autoplugged for those if the
	  user doesn't have jpegdec installed (resulting in a cryptic error
	  message about huffman tables). Better to disable JPEG decoding here
	  and let the user figure out that she needs to install jpegdec.

2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_sink_setcaps),
	(gst_gdk_pixbuf_class_init), (gst_gdk_pixbuf_init),
	(gst_gdk_pixbuf_flush), (gst_gdk_pixbuf_chain):
	* ext/gdk_pixbuf/gstgdkpixbuf.h:
	  Make work with packetised/framed input (e.g. png-in-quicktime). Use
	  GST_ELEMENT_ERROR when we return GST_FLOW_ERROR. Add some
	  GST_DEBUG_FUNCPTR here and there. Use GST_LOG for recurring
	  debug messages. Fix boilerplate macros.

2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gdk_pixbuf/gstgdkpixbuf.c: (gst_gdk_pixbuf_get_capslist),
	(gst_gdk_pixbuf_set_property), (gst_gdk_pixbuf_get_property):
	  No need to special-case for Gdk-2.0 any longer, we require
	  Gdk 2.2 or newer; minor clean-ups.

2006-04-18  Tim-Philipp Müller  <tim at centricular dot net>
