@@ -1,3 +1,11 @@
+2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/matroska/matroska-demux.c: (gst_matroska_demux_audio_caps),
+	(gst_matroska_demux_plugin_init):
+	  Make mpeg2 aac audio work: create artificial private codec data
+	  chunk which faad2 seems to require, just as we do for mpeg4 aac.
+	  Also call gst_riff_init(). Partially fixes #338767.
+
 2006-04-19  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/wavenc/gstwavenc.c: (gst_wavenc_base_init),
